# gltf-unlit-generator

./: .gitignore  Cargo.toml  README.md  package.json
assets/: BotDefault_Avatar.gltf
src/: index.js  main.rs
test/assets/: BotDefault_Avatar.gltf
