[package]
name = "gltf_unlit_generator"
version = "0.1.0"
authors = ["Robert Long <rlong@mozilla.com>"]
license = "MPL-2.0"
description = "Generates an unlit texture for each of the materials in a .gltf file."
exclude = ["assets/*"]

[dependencies]
image = "0.18.0"
clap = "2.31.2"

[dependencies.gltf]
version = "0.10.1"
features = ["extras", "names"]
