[package]
name = "gltf_unlit_generator"
version = "0.4.0"
authors = ["Robert Long <rlong@mozilla.com>"]
license = "MPL-2.0"
description = "Generates an unlit texture for each of the materials in a .gltf file."
include = ["src/**/*.rs", "Cargo.toml"]
repository= "https://github.com/MozillaReality/gltf-unlit-generator.git"

[dependencies]
image = "0.18.0"
clap = "2.31.2"
serde_json = "1.0.13"
gltf-json = "0.10.1"

[dependencies.gltf]
version = "0.10.1"
features = ["extras", "names"]
